Bug#34351 - A new function, Transaction::needToUpdate, is used to determine if Table::fetchForUpdate() should attempt to lock the record.  This function looks for ANY visible record version.  It is able to avoid a lock attempt for ConsistentRead transactions that start before a transaction that inserts a record. It also avoids locks then the committed version fo the record is deleted.

Also, this changeset delets the Table::syncUpdate object which
had no effect. In the process, Table::checkUniqueIndexes and 
its two subfunctions are redesigned to loop when a wait occurs 
instead of looping in the caller.